# vb6-script-2022

./: CMakeLists.txt  LICENCE  README.md
src/: classinstance.h  classtype.cpp  classtype.h  context.cpp  function.cpp  function.h  functionbody.cpp  type.cpp  type.h  value.h  vbruntimeerror.h
src/code/: codeblock.cpp  codeblock.h  keywordlist.h  lexer.cpp  lexer.h  parser.cpp  parser.h  parsetypes.cpp  parsetypes.h  project.cpp  project.h  stringutils.h  token.cpp  token.h  vbparsingerror.h
src/engine/: Location.h  array.cpp  array.h  classinstance.cpp  classinstance.h  classtype.cpp  classtype.h  command.h  context.cpp  context.h  function.cpp  function.h  functionargument.h  functionbody.cpp  functionbody.h  globalcontext.cpp  globalcontext.h  module.cpp  module.h  type.cpp  type.h  value.cpp  value.h  valueorref.cpp  valueorref.h  variabledescription.h  vbfwd.h  vbruntimeerror.h
src/libs/: dx.cpp  dx.h  simmodule.cpp  simmodule.h  vbstdlib.cpp  vbstdlib.h
test/: CMakeLists.txt  array_test.cpp  class_test.cpp  function_test.cpp  lexer_test.cpp  parser_test.cpp  project_test.cpp  script_test.cpp  struct_test.cpp  testcontext.h
test/old-projects/Test5.1/: Bilder.txt  CPU.bas  Form1.frm  GraficClass.cls  GraficModule.bas  Project1.vbp  README.md  Reedme.txt  Ship.cls  Shot.cls
test/scripts/: 00_assert.bas  00_assert.mod  01_Declare_local.bas  02_global_vars.bas  03_function_call.mod  04_method_without_args.mod  05_struct.mod  06_struct_as_argument.bas  06_struct_as_argument.mod  07_byval.bas  07_byval.mod  08_class.bas  08_class.mod  09_types.bas  10_class_methods.bas  10_class_methods.mod  11_binary_operators.bas  11_binary_operators.mod  12_if_statements.mod  13_for_statements.bas  13_for_statements.mod  14_complex_for_loops.mod  15_exit_for.bas  15_exit_for.mod  16_continue_for.bas  16_continue_for.mod  17_with.bas  18_select_case.bas  19_inline_if.bas  20_function_return_value.bas  21_operator_priority.bas  22_parenthesis.bas  23_type_shortcut_chars.bas  24_optional_function_parameters.bas  25_self_referencing_class.bas  26_local_variable_declaration_list.bas  27_nested_members.bas  28_unary_operators.bas  29_booleans.bas  30_class_operators.bas  (+10 more)
